# MinDDuel

./: .gitignore  Anchor.toml  DEPLOY.md  README.md  TECHNICAL_SPEC.md  TESTING.md  package-lock.json  package.json
backend/: .env.example  drizzle.config.ts  package.json  tsconfig.json
backend/scripts/: migrate.ts  setup-mock-usdc.ts
backend/src/: index.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GAME_MECHANICS.md  HACKATHON.md  README.md  SMART_CONTRACT.md  SUMMARY.md
docs/features/: game-modes.md  hint-economy.md  leaderboard-and-badges.md  sponsored-gas.md  tournaments.md  trivia-engine.md
docs/overview/: how-it-works.md  problem-statement.md  quickstart.md  solution.md  why-mindduel.md
docs/resources/: program-addresses.md  roadmap.md
docs/technical/: architecture.md  backend-api.md  realtime-sync.md  (+1 more)
frontend/: .env.example  FHackfrontier2brief_text.txt  next.config.mjs  package.json  tailwind.config.ts
idl/: mind_duel.json
programs/mind-duel/: Cargo.toml
programs/mind-duel/src/: constants.rs  errors.rs  lib.rs
programs/mind-duel/src/instructions/: cancel_match.rs  cancel_match_usdc.rs  claim_hint.rs  claim_hint_usdc.rs  commit_answer.rs  initialize_game.rs  initialize_game_usdc.rs  join_game.rs  join_game_usdc.rs  mod.rs  resign_game.rs  resign_game_usdc.rs  reveal_answer.rs  settle_game.rs  settle_game_usdc.rs  timeout_turn.rs
programs/mind-duel/src/state/: game.rs  hint_ledger.rs  mod.rs
scripts/: run-tests.sh  smoke-claim-hint-usdc.mjs  try-airdrop.sh  with-solana-path.sh
tests/: contract.test.ts  helpers.ts  mind_duel.ts
(+80 files in other folders)
