[package]
name = "mind-duel"
version = "0.1.0"
description = "MindDuel: Trivia-gated PvP Tic Tac Toe on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mind_duel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
